deployments/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wishlist-service
spec:
  selector:
    app: wishlist
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
